--- a/global.css
+++ b/global.css
@@ -58,3 +58,10 @@ nav a {
         width: calc(8vw + 1.32vh);
     }
 }
+
+.canvas {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+}
