--- a/global.css
+++ b/global.css
@@ -5,6 +5,8 @@
     --white: #fff;
     --gray: #d2d2d2;
     --black: #000;
+
+    --navHeight: min(4.25vw + 3vh, 20vh);
 }
 
 html, body {
@@ -14,42 +16,68 @@ html, body {
     font-family: sans-serif;
     font-size: calc(1rem + 0.25vh);
 }
-
 nav {
     display: grid;
-    position:fixed;
+    position: fixed;
     justify-items: center;
     grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 0.25fr 1fr 1fr 1fr 1fr 1fr 1fr;
     background-color: var(--blue);
-    height: calc(min(3.25vw + 2vh, 20vh));
+    height: var(--navHeight);
     width: 100vw;
     overflow: hidden;
     z-index: 100;
+
+    transition: margin-top 400ms ease-in;
 }
-nav a {
-    display: grid;
-    grid-auto-flow: column;   
-    text-decoration: none;
-}
-nav a p{
+nav a p {
     margin-top: auto;
     color: #000;
 }
-.navButton {
+.navButton /* equals "nav a" */ {
     background-color: var(--white);
-    height: 100%;
+    height: 90%;
     aspect-ratio: 1;
-    border-radius: 50%;
+    border-radius: 25%;
     margin-top: 0.25vw;
+
+    overflow: hidden;
+    display: grid;
+    grid-auto-flow: row;   
+    text-decoration: none;
+}
+.navButton div {
+    height: calc(var(--navHeight) * .9 - 1.25rem);
+    aspect-ratio: 1;
 }
 .navButton div img {
     display: inline-block;
-    height: 0%;
+    height: 100%;
     aspect-ratio: 1;
-    /* object-fit: contain; */
-    /* margin-top: calc((4vw + 1vh) / 8); */
 }
+#navToggle {
+    position: fixed;
+    background-color: var(--blue);
+    height: calc(var(--navHeight) / 4);
+    width: 5vw;
+    margin-top: var(--navHeight);
+    z-index: 101;
+
+    border-radius: 0% 0% 2.5vw 2vw;
+    transition: margin-top 400ms ease-in;
+}
+#navToggle p {
+    margin-top: 10%;
+    color: var(--white);
+    line-height: 50%;
+}
+nav.closed {
+    margin-top: -100%;
+}
+body:has(nav.closed) #navToggle {
+    margin-top: calc( var(--navHeight)-50%);
+}
+
 #LogoBcg {
     user-select: none;
     position: absolute;
@@ -68,9 +96,11 @@ nav a p{
     position: absolute;
 }
 
-@media (max-aspect-ratio: 1/1) { 
-    nav {
-        height: calc(20vh + 4vw); 
+@media (max-aspect-ratio: 1.75/1) { 
+    :root {
+        --navHeight: calc(20vh + 4vw);
+    }
+    nav { 
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 50% 50%;
         align-items: center;
@@ -83,4 +113,4 @@ nav a p{
         top: 37.5vh;
         transform: perspective(400px) rotateY(15deg);
     }
-}
+  }
