--- a/grids.css
+++ b/grids.css
@@ -18,18 +18,6 @@
     margin-left: auto;
     margin-right: auto;
 }
-/* .grid-90-2 {
-    display: grid;
-    position: relative;
-    width: 90%;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    text-align: center;
-
-    margin-left: auto;
-    margin-right: auto;
-} */
 .grid-100 {
     display: grid;
     position: relative;
@@ -38,60 +26,18 @@
     align-items: center;
     text-align: center;
 }
-/* .grid-100-2 {
-    display: grid;
-    position: relative;
-    width: 100%;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    text-align: center;
-
-    margin-left: auto;
-    margin-right: auto;
-}
-.grid-90-3 {
-    display:grid;
-    position: relative;
-    width: 90%;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    text-align: center;
-
-    margin-left: auto;
-    margin-right: auto;
-} */
 /* #endregion */
 /* #region Vertical grids */
+.grid-column {
+    grid-auto-flow: column;
+}
 .grid-vertical {
     grid-auto-flow: row;
 }
-/* .grid-vertical.grid-90-2 {
-    display: grid;
-    position: relative;
-    width:  unset;
-    height: 90%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-} */
 .grid-vertical.grid-100 {
     width: unset;
     height: 100%;
 }
-/* .grid-vertical.grid-100-2 {
-    width:  unset;
-    height: 100%;
-    grid-auto-flow: row;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-}
-.grid-vertical.grid-90-3 {
-    width: unset;
-    height: 90%;
-    grid-auto-flow: row;
-    grid-template-rows: 1fr 1fr 1fr;
-} */
 /* #endregion */
 /* #region Images */
 .img-90 {
@@ -112,6 +58,9 @@
     width: 100%;
     height:calc(min(100vh, 100%));
     object-fit: cover;
+}
+.no-select {
+    user-select: none;
 }
 .fit-contain {
     object-fit: contain;
@@ -142,22 +91,4 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
-    /*.grid-100-2:has(:nth-child(1).mobile-hidden) { 
-        grid-template-columns: 0 1fr;
-    }
-    .grid-100-2:has(:nth-child(2).mobile-hidden) {
-        grid-template-columns: 1fr 0;
-    }
-    .grid-100-2.grid-vertical:has(:nth-child(1).mobile-hidden) {
-        grid-template-rows: 0 1fr;
-    }
-    .grid-100-2.grid-vertical:has(:nth-child(2).mobile-hidden) {
-        grid-template-rows: 1fr 0;
-    }
-    .grid-90-3 {
-        width: unset;
-        height: 90%;
-        grid-auto-flow: row;
-        grid-template-columns: 1fr;
-    } */
 }
