--- a/css/global.css
+++ b/css/global.css
@@ -15,6 +15,7 @@ html, body {
     margin: 0;
     font-family: sans-serif;
     font-size: calc(1rem + 0.25vh);
+    overflow-y: hidden;
 }
 /* #endregion */
 /* #region navbar */
