--- a/css/index.css
+++ b/css/index.css
@@ -28,3 +28,11 @@
 .no-overflow {
     overflow: hidden;
 }
+
+@media(max-aspect-ratio: 1/1) {
+    #Logo {
+        width: 90vw;
+        margin-left: calc(45vw / 2);
+        margin-right: calc(45vw / 2);
+    }
+}
