--- a/css/food.css
+++ b/css/food.css
@@ -24,3 +24,12 @@ h1 {
     width: 100vw;
     height: calc(100% - var(--navHeight)); 
 }
+
+@media (max-aspect-ratio: 1/1) {
+    .card {
+        margin-top: 1rem;
+        width: 90%;
+        aspect-ratio: 3.5/2.5;
+    }
+
+}
