--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,9 @@
       <div class="centered"><img src="imgs/icons/map.png" alt="Map icon"></div>
       <p class="centered">Map</p>
     </a>
-    <a href="activity.html" class="navButton">
+    <a href="Credits.html" class="navButton">
       <div class="centered"><img src="imgs/icons/activities.png" alt="Activities icon"></div>
-      <p class="centered">Activity</p>
+      <p class="centered">Credits</p>
     </a>
   </nav>
 
