--- a/css/food.css
+++ b/css/food.css
@@ -19,6 +19,11 @@ h1 {
     z-index: -1;
     filter: drop-shadow(2px 2px 3px #000)
 }
+.card h2 {
+    display: inline-block;
+    margin-top: 50%;
+    color: #000;
+}
 #cardHolder {
     position: absolute; 
     width: 100vw;
@@ -29,17 +34,25 @@ h1 {
     aspect-ratio: 2.5/3.5;
 }
 
+@media (max-aspect-ratio: 1.5/1) {
+    /* .card {
+        height: 10vh;
+        aspect-ratio: 2.5/3.5;
+        background-color: orange;
+    } */
+}
+
 @media (max-aspect-ratio: 1/1) {
     .card {
         margin-top: 1rem;
         width: 90vw;
-        height: unset;
-        aspect-ratio: 3.5/2.5;
+        /* height: unset; */
+        /* aspect-ratio: 3.5/2.5; */
     }
     #cardHolder div {
         margin-top: 1rem;
         width: 90vw;
-        height: unset;
-        aspect-ratio: 3.5/2.5;
+        /* height: unset; */
+        /* aspect-ratio: 3.5/2.5; */
     }
 }
